--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -22,6 +22,8 @@
         "**Actividad M2.1 Uso de Google Colab**\n",
         "\n",
         "**Andres Saldaña Rodriguez A01721193**"
+        "\n",
+        "**Fernando Gonzalez Rosas A01253694**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
