--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -19,7 +19,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Actividad M2.1 Uso de Google Colab**\n",
+        "**Tecnológico de Monterrey**\n",
         "\n",
         "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694**"
       ],
