--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "**Actividad M2.1 Uso de Google Colab**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694**"
+        "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694 \n Eugenio Morales Ortiz A01734612**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
