--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "**Tecnológico de Monterrey**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694 \n Eugenio Morales Ortiz A01734612**"
+        "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694, Eugenio Morales Ortiz A01734612, Karen González Ugalde A01411597**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
