--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -5,7 +5,10 @@
     "colab": {
       "name": "M2-1-Andres Saldaña.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "mount_file_id": "1jTKdTmFj8tRQrIansleO4wYfg1H59oaV",
+      "authorship_tag": "ABX9TyNj5Wlxh5G50tyZky7BEdl7",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,10 +21,20 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "**Tecnológico de Monterrey**\n",
+        "<a href=\"https://colab.research.google.com/github/Andres-Saldana/ActividadFormativaM2-Equipo7/blob/main/M2_1_Andres_Salda%C3%B1a.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Actividad M2.1 Uso de Google Colab**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193, Fernando Gonzalez Rosas A01253694, Eugenio Morales Ortiz A01734612, Karen González Ugalde A01411597**"
+        "**Andres Saldaña Rodriguez A01721193**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
