--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1jTKdTmFj8tRQrIansleO4wYfg1H59oaV",
-      "authorship_tag": "ABX9TyNj5Wlxh5G50tyZky7BEdl7",
+      "authorship_tag": "ABX9TyMEjDjNs17f9RtCAKB3E0F/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,9 @@
       "source": [
         "**Actividad M2.1 Uso de Google Colab**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193**"
+        "**Andres Saldaña Rodriguez A01721193**\n",
+        "\n",
+        "**hello**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
@@ -42,7 +44,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 56,
+      "execution_count": null,
       "metadata": {
         "id": "xjGe8E61XIHL"
       },
@@ -74,7 +76,7 @@
         "id": "fHIY5RUNXjsz",
         "outputId": "31981f3d-a1ce-41c5-bf97-dbc0e17fac11"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -325,12 +327,11 @@
       "metadata": {
         "id": "oyHDd4aSYRUZ",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "182fe297-921d-4562-ea84-5f6eef8cbbe5"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -409,7 +410,7 @@
         "id": "iLb614vDQXjW",
         "outputId": "b85e7e54-3212-426c-ec9f-f86e5175e8c8"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,13 +641,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "o1qo8l3gSbbh",
         "outputId": "337afa54-19ef-4952-a883-f5086b1e9924"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -729,13 +729,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "AX_qpMWQSdif",
         "outputId": "4edcbd24-7bff-4896-9ef3-21dd737df381"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -767,13 +766,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "6MwEXKVcm85I",
         "outputId": "d2609fa5-3968-48a8-fc8d-a58b2d13f233"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -796,13 +794,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "vQgSHA8QnCFY",
         "outputId": "1ff2774f-785a-4d72-b2e5-ed3a461bcf78"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -843,13 +840,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "NrDkRPz-nGMZ",
         "outputId": "7ad21fdf-3860-407e-9056-972d18590ec7"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -881,13 +877,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ihdMcgzunIRX",
         "outputId": "5341f06b-35dc-4454-dc9b-8c1c3189a094"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -920,13 +915,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IhzSMsZmnKLW",
         "outputId": "39da5fa0-1202-439e-ae4d-6306645ecee1"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -946,7 +940,7 @@
       "metadata": {
         "id": "F_2OeMoboe5I"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -963,7 +957,7 @@
         "id": "Fnw_d0iyo5LG",
         "outputId": "6ed758e0-2996-44d1-a6e9-77853bab103a"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1209,7 +1203,7 @@
         "id": "6-nY6edNpSnd",
         "outputId": "d89ad5f6-ee0d-4adc-aba1-2ba6c100fd54"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
