Creado mediante Colaboratory

--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -6,8 +6,6 @@
       "name": "M2-1-Andres Saldaña.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "mount_file_id": "1jTKdTmFj8tRQrIansleO4wYfg1H59oaV",
-      "authorship_tag": "ABX9TyMEjDjNs17f9RtCAKB3E0F/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -32,11 +30,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Actividad M2.1 Uso de Google Colab**\n",
+        "**Tecnológico de Monterrey**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193**\n",
-        "\n",
-        "**hello**"
+        "**Andres Saldaña Rodriguez A01721193**"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
