--- a/M2_1_Andres_Saldaña.ipynb
+++ b/M2_1_Andres_Saldaña.ipynb
@@ -30,9 +30,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Tecnológico de Monterrey**\n",
+        "**Actividad M2.1 Uso de Google Colab**\n",
         "\n",
-        "**Andres Saldaña Rodriguez A01721193**"
+        "Andres Saldaña Rodriguez A01721193\n",
+        "\n",
+        "Karen González Ugalde A01411597\n",
+        "\n",
+        "Fernando Gonzalez Rosas A01253694\n",
+        "\n",
+        "José Eugenio Morales Ortiz A01734612\n",
+        "\n",
+        "Daniel Sánchez Villarreal A01197699"
       ],
       "metadata": {
         "id": "-bD2ONClXh06"
